--- a/social_network/friends/static/friends/css/friends.css
+++ b/social_network/friends/static/friends/css/friends.css
@@ -52,6 +52,11 @@ a.link.two{
     color: #81818D;
     font-weight: 500;
 }
+.one-friend{
+    width: calc(2.2vw + 3.1vh);
+    font-weight: 700;
+    border-bottom: 0.3vh #070A1C solid
+}
 .all-frames{
     width: calc(32vw + 45.2vh);
     height: fit-content;
@@ -141,8 +146,12 @@ a.link.two{
     height: calc(1.4vw + 2vh);
     padding:calc(0.3vw + 0.5vh) calc(0.5vw + 0.8vh) ;
     font-size: calc(0.5vw + 0.7vh);
+    justify-content: center;
+    align-items: center;
 }
-
+.recomended{
+    width: calc(2.8vw + 3.9vh) !important;
+}
 .button-confirm{
     width: calc(7.7vw + 5.4vh);
     background-color: rgba(84, 60, 82, 1);
