--- a/social_network/registration/templates/registration/index.html
+++ b/social_network/registration/templates/registration/index.html
@@ -23,14 +23,16 @@
                     {% csrf_token%}
                     <div class = "inputs">
                         {% for field in form %}
-                            <div class = "input">
-                                {{ field.label_tag }}
-                                <div class = "field-container">
-                                    {{ field }}
-                                    <img class = "eye-img"src="{% static 'images/icons/eye.png'%}" id = "{{ field.auto_id }}" alt="">
+                            {% if field.name != "username" %}
+                                <div class = "input">
+                                    {{ field.label_tag }}
+                                    <div class = "field-container">
+                                        {{ field }}
+                                        <img class = "eye-img"src="{% static 'images/icons/eye.png'%}" id = "{{ field.auto_id }}" alt="">
+                                    </div>
+                                    {{ field.errors }}
                                 </div>
-                                {{ field.errors }}
-                            </div>
+                            {% endif %}
                         {% endfor %}
                     </div>
                     <button type = "submit">Створити акаунт</button>
