--- a/social_network/templates/base_header_main.html
+++ b/social_network/templates/base_header_main.html
@@ -47,6 +47,9 @@
                 {% endblock %}
             </div>
         </div>
+        <div class = "hat-down">
+            
+        </div>
 
         {% block content %}
         {% endblock %}
