--- a/social_network/publications/templates/my_publications/index.html
+++ b/social_network/publications/templates/my_publications/index.html
@@ -365,26 +365,45 @@
                 {% csrf_token %}
 
                 {% for field in form %}
-                    {% if field.name == 'picture' %}
+                    {% if field.name == 'images' %}
+                        <div id="image-preview-container">
+
+                        </div>
                         <div class="label-tag">
                             {{ field.label_tag }}
                             <div class="inputs-photo-emoji-form">
                                 <div class="emojy-and-photo">
-                                    <input type="file" name="picture" id="image-to-post-form" class = "image-to-post-form">
-                                    
-                                    <label for="image-to-post-form" class = "image-icon-form-label">
-                                        <img class="image-icon-form" src="{% static 'images/icons/icon-image.png' %}" alt="">
-                                    </label>
+                                    {{ field }}
+                                    <div class = "merge-image">
+                                        <label for="image-to-post-form" class = "image-icon-form-label">
+                                            <img class="image-icon-form" src="{% static 'images/icons/icon-image.png' %}" alt="">
+                                            
+                                        </label>
 
-                                    <img src="{% static 'images/icons/emoji.png' %}" alt="">
+                                        <img class = "image-emoji-form" src="{% static 'images/icons/emoji.png' %}" alt="">
+                                    </div>
                                     <button class="button-upload-form" type="submit">
                                         <h4 class="upload-title">Публікація</h4>
-                                        <img src="{% static 'images/icons/PlaneR.png' %}" alt="">
+                                        <img class = "image-planer" src="{% static 'images/icons/PlaneR.png' %}" alt="">
                                     </button>
                                 </div>
                             </div>
                         </div>
                         <div class="field-error">{{ field.errors }}</div>
+                    {% elif field.name == "tags" %}
+                        <div class = "all_tags">    
+                            <div class = "tag-container">
+                                {% for tag in tags %}
+                                <label class="tag-object" data-id="{{ tag.id }}">
+                                    {{ tag.tag_name}}
+                                    <input type="checkbox" name="tags" value="{{ tag.id }}">
+                                </label>
+                                {% endfor %}
+                                <button class = "button-hashtag">
+                                    <img  class = "image-hashtag" src="{% static 'images/icons/add_hashtag.png' %}" alt="">
+                                </button>
+                            </div>
+                        </div>
                     {% else %}
                         <div class="inputs-form">
                             <div class="label-tag">{{ field.label_tag }}</div>
@@ -393,10 +412,8 @@
                         </div>
                     {% endif %}
                 {% endfor %}
-                <button type = "submit">Створити</button>
-
             </form>
-        </div>
+        </div>    
     </div>
 
 {% endblock %}
