--- a/social_network/static/css/base_header_main.css
+++ b/social_network/static/css/base_header_main.css
@@ -36,7 +36,10 @@ body{
 }
 .hat{
     width: 100%;
-    height: calc(3.1vw + 4.3vh);    
+    height: calc(3.1vw + 4.3vh);  
+    position: fixed;
+    top: 0px;
+    left: 0px;  
     background-color: white;
     display: flex;
     justify-content: center;
@@ -45,7 +48,19 @@ body{
     overflow: visible;
     white-space: nowrap;
 }
-
+.hat-down{
+    width: 100%;
+    height: calc(3.1vw + 4.3vh);  
+    top: 0px;
+    left: 0px;  
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: calc(0.8vw + 1.2vh) calc(2.8vw + 3.9vh);
+    overflow: visible;
+    white-space: nowrap;
+}
 .logo{
     height: calc(1vw + 1.5vh);
 }
