--- a/social_network/friends/templates/recommended/recommended.html
+++ b/social_network/friends/templates/recommended/recommended.html
@@ -36,12 +36,16 @@
                             </div>
                         
                             <div class = "card-buttons">
+                                <form method="post">
                                 <button class = "button button-confirm recomended">
                                     Додати
                                 </button>
+                                </form>
+                                <form method = "post">
                                 <button class = "button button-delete">
                                     Видалити
                                 </button>
+                                </form>
                             </div>
                         </div>
                     {% endfor %}
