--- a/social_network/friends/static/friends/css/friends.css
+++ b/social_network/friends/static/friends/css/friends.css
@@ -173,3 +173,12 @@ a.link.two{
     background-color: rgba(233, 229, 238, 1);
     border-radius: calc(0.1vw + 0.15vw);
 }
+form{
+    width: auto;
+    height: auto;
+}
+.wrapper-body{
+    display: flex;
+    flex-direction: column;
+    gap: calc(0.3vw + 0.5vh);
+}
