--- a/social_network/friends/static/friends/css/friends.css
+++ b/social_network/friends/static/friends/css/friends.css
@@ -74,7 +74,7 @@ a.link.two{
     width: calc(32vw + 45.2vh);
     height: calc(11.4vw + 16.1vh);
     max-height: calc(20.8vw + 29.4vh);
-
+    height: auto;
     background-color: white;
     border-radius: calc(0.3vw + 0.5vh);
     display: flex;
@@ -93,7 +93,7 @@ a.link.two{
     color: rgba(7, 10, 28, 1);
 }
 .all-cards{
-    height: calc(9.1vw + 12.9vh);
+    height: auto;
     max-height: calc(18.5vw + 26.2vh);
     width: calc(30.7vw + 44vh);
     max-width: calc(30.7vw + 44vh);
@@ -121,6 +121,7 @@ a.link.two{
     height: calc(3.3vw + 4.7vh);
     border-radius: 1234px;
 }
+
 .card-info{
     height: calc(1.9vw + 2.7vh);
     width: calc(10vw + 14.2vh);
@@ -139,7 +140,6 @@ a.link.two{
 }
 .card-buttons{
     display: flex;
-    width: calc(7.7vw + 10.8vh);
     height: calc(1.4vw + 2vh);
     gap: calc(0.5vw + 0.8vh);
 }
@@ -157,11 +157,18 @@ a.link.two{
     width: calc(2.8vw + 3.9vh) !important;
 }
 .button-confirm{
-    width: calc(7.7vw + 5.4vh);
     background-color: rgba(84, 60, 82, 1);
     color: white;
 }
 .button-delete{
+    width: calc(3.3vw + 4.6vh);
+    color: rgba(84, 60, 82, 1);
+    background-color: white;
+}
+.main{
+    background-color: white;
+}
+.button-delete-recommended{
     width: calc(3.3vw + 4.6vh);
     color: rgba(84, 60, 82, 1);
     background-color: white;
@@ -181,4 +188,24 @@ form{
     display: flex;
     flex-direction: column;
     gap: calc(0.3vw + 0.5vh);
+}
+.hidden{
+    visibility: hidden;
+    display: none;
+}
+.wrapper-body{
+    width: calc(32vw + 45.2vh);
+}
+.empty-posts{
+    width: calc(32vw + 45.2vh);
+    background-color: rgba(199, 197, 201, 0.252);
+    border-radius: calc(0.3vw + 0.5vh);
+    height: calc(5vw + 4vh);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.empty-h1{
+    color: rgb(169, 166, 171);
+    font-size: calc(1vw + 1.4vh);
 }
