--- a/social_network/friends/templates/friends/friends.html
+++ b/social_network/friends/templates/friends/friends.html
@@ -22,43 +22,43 @@
             <div class = "request-card">
                 <div class = "title-card">
                     <h1 class = "title-h1 h1">Запити</h1>
-                    <h1 class = "title-watch h1">Дивитись усі</h1>
+                    <a class = "title-watch h1" href = "{% url 'all_requests'%}">Дивитись усі</a>
                 </div>
                     
                 
                 <div class = "all-cards request">
                     {% for request in all_requests %}
-                        
+                        {% if not request.is_friend %}
+                            <div class = "card" id = "card-request-{{request.sent_user.pk}}">
+                                <div class = "profile-card">
+                                    <img class = "avatar" src="{{request.sent_user.profile.profile_image.url}}" alt="">
+                                </div>
+                                <div class = "card-info">
+                                    <h1 class = "name">{{request.sent_user.first_name}} {{request.sent_user.last_name}}</h1>
+                                    <h1 class = "tag-name">@{{request.sent_user.username}}</h1>
+                                </div>
                     
-                        <div class = "card">
-                            <div class = "profile-card">
-                                <img class = "avatar" src="{{request.sent_user.profile.profile_image.url}}" alt="">
+                                <div class = "card-buttons">
+                                    <a class = "button button-confirm" href="{% url 'friend_profile' request.sent_user.pk %}">
+                                        Підтвердити
+                                    </a>
+                                    <a class = "button button-delete" id = "{% url 'delete_request' request.sent_user.pk %}">
+                                        Видалити
+                                    </a>
+                                </div>
                             </div>
-                            <div class = "card-info">
-                                <h1 class = "name">{{request.sent_user.first_name}} {{request.sent_user.last_name}}</h1>
-                                <h1 class = "tag-name">@{{request.sent_user.username}}</h1>
-                            </div>
-                
-                            <div class = "card-buttons">
-                                <a class = "button button-confirm" href="{% url 'friend_profile' request.sent_user.pk %}">
-                                    Підтвердити
-                                </a>
-                                <a class = "button button-delete" id = "{% url 'delete_request' request.sent_user.pk %}">
-                                    Видалити
-                                </a>
-                            </div>
-                        </div>
+                        {% endif%}
                     {% endfor %}
                 </div>
             </div>
             <div class = "request-card">
                 <div class = "title-card">
                     <h1 class = "title-h1 h1">Рекомендації</h1>
-                    <h1 class = "title-watch h1">Дивитись усі</h1>
+                    <a class = "title-watch h1" href = "{% url 'recommended'%}">Дивитись усі</a>
                 </div>
                 <div class = "all-cards request">
                     {% for recommended in all_recommended %}
-                        <div class = "card">
+                        <div class = "card" id = "card-recommended-{{recommended.user.pk}}">
                             <div class = "profile-card">
                                 <img class = "avatar" src="{{ recommended.profile_image.url }}" alt="">
                             </div>
@@ -68,10 +68,10 @@
                             </div>
                         
                             <div class = "card-buttons">
-                                <a class = "button button-confirm recomended">
+                                <a class = "button button-confirm button-confirm-recomended" id = "{% url 'sent_request' recommended.user.pk %}">
                                     Додати
                                 </a>
-                                <a class = "button button-delete">
+                                <a class = "button button-delete-recommended" id = "{% url 'delete_recommended' recommended.user.pk%}">
                                     Видалити
                                 </a>
                             </div>
@@ -82,11 +82,11 @@
             <div class = "request-card">
                 <div class = "title-card">
                     <h1 class = "title-h1 h1">Всі друзі</h1>
-                    <h1 class = "title-watch h1">Дивитись усі</h1>
+                    <a class = "title-watch h1" href = "{% url 'all_friends'%}">Дивитись усі</a>
                 </div>
                 <div class = "all-cards request">
                     {% for friend in all_friends %}
-                    <div class = "card">
+                    <div class = "card" id = "card-friend-{{friend.user.pk}}">
                         
                         <div class = "profile-card">
                             <img class = "avatar" src="{{ friend.profile_image.url }}" alt="">
@@ -103,7 +103,7 @@
                             <a class = "button button-confirm">
                                 Повідомлення
                             </a>
-                            <a class = "button button-delete">
+                            <a class = "button button-delete-friend" id = "{% url 'delete_friend' friend.user.pk%}">
                                 Видалити
                             </a>
                         </div>
@@ -117,5 +117,5 @@
 {% endblock %}
 {% block script %}
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src = "{% static 'friends/js/script.js'%}"></script>
-{% endblock  %}
+    <script src = "{% static 'friends/js/script.js' %}"></script>
+{% endblock %}
